--- a/client/src/pages/Home.css
+++ b/client/src/pages/Home.css
@@ -1,42 +1,41 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+@import url(../assets/fonts.css);
+
+:root {
+  --main-font: "Silkscreen", sans-serif;
+  --black: rgb(0, 0, 0);
+  --white: rgb(255, 255, 255);
+  --light-blue: rgb(58, 229, 255);
+  --green: rgb(9, 95, 29);
+}
+
+.home-container {
+  font-family: "VT323", monospace;
   text-align: center;
+  padding: 20px;
+}
+.title {
+  font-size: 4rem;
+  font-weight: normal;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.selection-container {
+  display: flex;
+  gap: 20px;
+  flex-direction: column;
+  align-items: center;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.page-link a {
+  display: inline-block;
+  color: var(--black);
+  padding: 10px 20px;
+  font-size: 1.8rem;
+  text-decoration: none;
+  border-radius: 10px;
+  transition: 0.3s;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+.page-link a:hover {
+  color: var(--white);
+  background-color: var(--green);
 }
