--- a/client/src/components/Navbar.css
+++ b/client/src/components/Navbar.css
@@ -14,8 +14,8 @@
   justify-content: space-between;
   align-items: center;
   border: 1px dashed black;
-  padding: 0;
-  margin: 0;
+  margin: 10px;
+  gap: 10px;
   height: 60px;
-  width: 100%;
+  max-width: 100%;
 }
